# tempsyncctl

./: .env.example  .gitignore  README.md  config.json  dev.ps1  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/tempsyncctl/: cli.py
src/tempsyncctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basic.py
